# Industrial_policy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.smoke.yaml  config.yaml  sec_tag_map.yaml
scripts/: run_pipeline.ps1
src/industrial_policy/: __init__.py  cli.py  config.py  log.py
src/industrial_policy/analysis/: did.py  event_study.py  incidence.py  outputs.py  robustness.py  sample_report.py
src/industrial_policy/entity/: __init__.py  name_matching.py  sec_company_lookup.py
src/industrial_policy/features/: awards.py  financials.py  panel.py
src/industrial_policy/ingest/: census_concentration.py  eu_state_aid.py  sec_fsds.py  usaspending.py  usaspending_download.py
src/industrial_policy/match/: diagnostics.py  nearest_neighbor.py  propensity.py
src/industrial_policy/utils/: dates.py  http.py  paths.py  sec.py  textnorm.py
src/industrial_policy/viz/: event_study_plots.py
tests/: test_cik_normalize.py  test_env_override.py  test_event_time.py  test_name_matching_no_blowup.py  test_nearest_neighbor_weights.py  test_panel_stacked_treated.py  test_quarterize.py  test_quarterize_flows_fsds.py  test_riskset_censoring.py  test_sec_panel_no_dupes.py  test_sec_panel_unique_key.py  test_sec_quarterize_priority.py  test_textnorm.py  test_usaspending_hasnext.py  test_usaspending_interval_split.py  test_usaspending_resume.py
