[project]
name = "industrial_policy"
version = "0.1.0"
description = "Industrial policy subsidy to markup pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Krzysztof Rybinski"}]
dependencies = [
  "duckdb",
  "jinja2",
  "linearmodels",
  "matplotlib",
  "numpy",
  "pandas",
  "python-dotenv>=1.0",
  "pyarrow",
  "pyyaml",
  "rapidfuzz",
  "requests",
  "scikit-learn",
  "statsmodels",
  "tenacity",
  "tqdm",
  "typer[all]",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
industrial-policy = "industrial_policy.cli:app"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
